--- a/feature/src/main/res/drawable/ic_dilate_24dp.xml
+++ b/feature/src/main/res/drawable/ic_dilate_24dp.xml
@@ -1,9 +1,38 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-        android:width="24dp"
-        android:height="24dp"
-        android:viewportWidth="24.0"
-        android:viewportHeight="24.0">
-    <path
-        android:fillColor="#FF000000"
-        android:pathData="M9,4v3h5v12h3L17,7h5L22,4L9,4zM3,12h3v7h3v-7h3L12,9L3,9v3z"/>
+<?xml version="1.0" encoding="utf-8"?>
+<vector
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="24.0"
+    android:viewportHeight="24.0">
+
+    <group android:name="resize">
+
+        <path
+            android:name="begin"
+            android:pathData="M 1,23
+            h 6
+            m 0, 0
+            l -6, -12
+            m 0, 0
+            v 12"
+            android:strokeColor="@android:color/black"
+            android:strokeLineCap="round"
+            android:strokeWidth="2" />
+
+        <path
+            android:name="end"
+            android:pathData="M 12,23
+            h 11
+            m 0, 0
+            l -11, -22
+            m 0, 0
+            v 22"
+            android:strokeColor="@android:color/black"
+            android:strokeLineCap="round"
+            android:strokeWidth="2" />
+
+
+    </group>
+
 </vector>
