--- a/feature/src/main/res/drawable/ic_polar_24dp.xml
+++ b/feature/src/main/res/drawable/ic_polar_24dp.xml
@@ -1,9 +1,33 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-        android:width="24dp"
-        android:height="24dp"
-        android:viewportWidth="24.0"
-        android:viewportHeight="24.0">
-    <path
-        android:fillColor="#FF0000"
-        android:pathData="M22,18v-2H8V4h2L7,1 4,4h2v2H2v2h4v8c0,1.1 0.9,2 2,2h8v2h-2l3,3 3,-3h-2v-2h4zM10,8h6v6h2V8c0,-1.1 -0.9,-2 -2,-2h-6v2z"/>
+<?xml version="1.0" encoding="utf-8"?>
+<vector
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="24.0"
+    android:viewportHeight="24.0">
+
+    <group android:name="unit_circle">
+
+        <path
+            android:name="circle"
+            android:pathData="M 12,23
+            a 11,11, 0 1 0 -0.0001,0"
+            android:strokeColor="@android:color/black"
+            android:strokeLineCap="square"
+            android:strokeWidth="2" />
+
+        <path
+            android:name="arrow"
+            android:pathData="M 12,12
+            h 8
+            m -3,-3
+            l 3,3
+            m 0,0
+            l -3,3"
+            android:strokeColor="@android:color/black"
+            android:strokeLineCap="round"
+            android:strokeWidth="2" />
+
+    </group>
+
 </vector>
