--- a/feature/src/main/res/drawable/ic_transform_24dp.xml
+++ b/feature/src/main/res/drawable/ic_transform_24dp.xml
@@ -1,9 +1,43 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-        android:width="24dp"
-        android:height="24dp"
-        android:viewportWidth="24.0"
-        android:viewportHeight="24.0">
-    <path
-        android:fillColor="#FFFF0000"
-        android:pathData="M22,18v-2H8V4h2L7,1 4,4h2v2H2v2h4v8c0,1.1 0.9,2 2,2h8v2h-2l3,3 3,-3h-2v-2h4zM10,8h6v6h2V8c0,-1.1 -0.9,-2 -2,-2h-6v2z"/>
+<?xml version="1.0" encoding="utf-8"?>
+<vector
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="24.0"
+    android:viewportHeight="24.0">
+
+    <group android:name="route">
+
+        <path
+            android:name="arrow_down"
+            android:pathData="M 1,9
+            h 3
+            m 8,0
+            a 4,4 0 0 1 4,4
+            v 10
+            m 3,-3
+            l -3,3
+            m 0,0
+            l -3,-3"
+            android:strokeColor="@android:color/white"
+            android:strokeLineCap="round"
+            android:strokeWidth="2" />
+
+        <path
+            android:name="arrow_up"
+            android:pathData="M 23,15
+            h -3
+            m -8,0
+            a 4,4 0 0 1 -4,-4
+            v -10
+            m -3,3
+            l 3,-3
+            m 0,0
+            l 3,3"
+            android:strokeColor="@android:color/white"
+            android:strokeLineCap="round"
+            android:strokeWidth="2" />
+
+    </group>
+
 </vector>
